--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       <h1 class="bonat-title">HEllO FROM BONAT</h1>
     </div>
 
-    <script src="https://mustafa-alfar.github.io/Color_Game/assets/js/colorgame.js"></script>
+    <script src="https://mustafa-alfar.github.io/plugin/index.js"></script>
   </body>
 </html>
